// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gjs 1`] = `
{
  "7MCO2v": {
    "defaultMessage": "in template",
    "description": "in template desc",
  },
  "FmytR9": {
    "defaultMessage": "G'day!, from a secondary component in the same GJS file",
  },
  "getter-message": {
    "defaultMessage": "js getter with an id",
  },
  "hdXT/o": {
    "defaultMessage": "js getter with no id",
  },
  "lMXYqa": {
    "defaultMessage": "{connectorName, select, none {Install Service} other {Install {connectorName}} }",
  },
  "mkhWoT": {
    "defaultMessage": "Very long message with multiple'' breaklines and multiple spaces '<a href={href}>' Link '</a>'",
    "description": "Nice description",
  },
}
`;

exports[`gts 1`] = `
{
  "7MCO2v": {
    "defaultMessage": "in template",
    "description": "in template desc",
  },
  "getter-message": {
    "defaultMessage": "js getter with an id",
  },
  "hdXT/o": {
    "defaultMessage": "js getter with no id",
  },
  "lMXYqa": {
    "defaultMessage": "{connectorName, select, none {Install Service} other {Install {connectorName}} }",
  },
  "mkhWoT": {
    "defaultMessage": "Very long message with multiple'' breaklines and multiple spaces '<a href={href}>' Link '</a>'",
    "description": "Nice description",
  },
  "o1wtct": {
    "defaultMessage": "hello from a secondary component in the same file",
  },
}
`;

exports[`hbs 1`] = `
{
  "7MCO2v": {
    "defaultMessage": "in template",
    "description": "in template desc",
  },
  "lMXYqa": {
    "defaultMessage": "{connectorName, select, none {Install Service} other {Install {connectorName}} }",
  },
  "mkhWoT": {
    "defaultMessage": "Very long message with multiple'' breaklines and multiple spaces '<a href={href}>' Link '</a>'",
    "description": "Nice description",
  },
}
`;
